Criação classes pedidos

--- a/Web.config
+++ b/Web.config
@@ -5,11 +5,9 @@
   -->
 <configuration>
   <connectionStrings>
-  <add name="BradescoExpresso" connectionString="Persist Security Info=True;User ID=sa;Password=webf1234;Initial Catalog=DBNardys;Data Source=DESKTOP-AEH6QB1\SQLEXPRESS;Pooling=true;Connection Lifetime=60;Connect Timeout=60;Max Pool Size=100;" providerName="System.Data.SqlClient"/>
+    <add name="BradescoExpresso" connectionString="Persist Security Info=True;User ID=sa;Password=webf1234;Initial Catalog=DBNardys;Data Source=DESKTOP-AEH6QB1\SQLEXPRESS;Pooling=true;Connection Lifetime=60;Connect Timeout=60;Max Pool Size=100;" providerName="System.Data.SqlClient"/>
     <!--add name="BradescoExpresso" connectionString="Persist Security Info=True;User ID=sa;Password=webf1234;Initial Catalog=DBNardys;Data Source=VGEREVINI\SQLEXPRESS2014;Pooling=true;Connection Lifetime=60;Connect Timeout=60;Max Pool Size=100;" providerName="System.Data.SqlClient"/-->
-    <!--<add name="BradescoExpresso" connectionString="Persist Security Info=True;User ID=sa;Password=webf1234;Initial Catalog=DBNardys;Data Source=DESKTOP-AEH6QB1\SQLEXPRESS;Pooling=true;Connection Lifetime=60;Connect Timeout=60;Max Pool Size=100;" providerName="System.Data.SqlClient"/>-->
-  <!--<add name="BradescoExpresso" connectionString="Persist Security Info=True;User ID=sa;Password=webf1234;Initial Catalog=DBNardys;Data Source=VGEREVINI\SQLEXPRESS2014;Pooling=true;Connection Lifetime=60;Connect Timeout=60;Max Pool Size=100;" providerName="System.Data.SqlClient"/>-->
-  <add name="BradescoExpresso" connectionString="Persist Security Info=True;User ID=sa;Password=135799;Initial Catalog=DBNardys;Data Source=PC-LAURA;Pooling=true;Connection Lifetime=60;Connect Timeout=60;Max Pool Size=100;" providerName="System.Data.SqlClient"/>
+    <!--add name="BradescoExpresso" connectionString="Persist Security Info=True;User ID=sa;Password=135799;Initial Catalog=DBNardys;Data Source=PC-LAURA;Pooling=true;Connection Lifetime=60;Connect Timeout=60;Max Pool Size=100;" providerName="System.Data.SqlClient"/-->
   </connectionStrings>
   <appSettings>
 
